# testing12

./: .env.example  .gitignore  DATASET_DOWNLOAD.md  DELIVERABLES.txt  INTEGRATION_COMPLETE.md  INTEGRATION_MANIFEST.md  PLAN_ADVANCED.md  PLATFORM_ARCHITECTURE.md  QUICK_START.md  README.md  README_INTEGRATION.md  SETUP_GUIDE.md  TODO.md  VERIFICATION_CHECKLIST.md  app.py  pyproject.toml  setup.ps1  setup.sh  startup.ps1  startup.sh
models/: diabetes.joblib  diabetes_metadata.json  heart.joblib  heart_metadata.json  liver.joblib  liver_metadata.json  parkinsons.joblib  parkinsons_metadata.json
quadra_diag/: __init__.py  main.py  schemas.py
quadra_diag/api/: routes.py
quadra_diag/core/: cache.py  config.py  logging.py  middleware.py
quadra_diag/db/: migrations.py  models.py  session.py
quadra_diag/ml/: __init__.py  catalog.py  training.py
quadra_diag/services/: analytics.py  auth.py  explainability.py  pdf_generator.py  prediction.py  reporting.py
quadra_diag/web/: __init__.py  flash.py  routes.py
quadra_diag/web/static/: app.js  styles.css
quadra_diag/web/templates/: 404.html  admin.html  analytics.html  assessment_detail.html  auth.html  base.html  compare.html  dashboard.html  disease_form.html  home.html  mri.html  profile.html  report_detail.html  result.html  settings.html
quadra_diag/web/templates/components/: footer.html  nav.html  team_card.html  toasts.html
scripts/: train_models.py
tests/: conftest.py  test_app.py
