[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quadra-diag"
version = "2.0.0"
description = "Production-ready multi-disease risk assessment platform"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "Riddhima" },
  { name = "Sakshi" },
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.12,<1.0",
  "itsdangerous>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0",
  "email-validator>=2.2,<3.0",
  "pandas>=2.2,<3.0",
  "numpy>=2.1,<3.0",
  "scikit-learn>=1.6,<1.8",
  "joblib>=1.4,<2.0",
  "shap>=0.45,<1.0",
  "reportlab>=4.2,<5.0",
  "openpyxl>=3.1,<4.0",
  "matplotlib>=3.9,<4.0",
  "Pillow>=10.4,<11.0",
  "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.28,<1.0",
]

[tool.setuptools.packages.find]
include = ["quadra_diag*"]

[tool.setuptools.package-data]
quadra_diag = ["web/templates/*.html", "web/static/*.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
